<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layoutTop">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_spyfall"
                android:textAlignment="center"/>

            <ImageView
                android:id="@+id/imageUnicorn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/miniunicorneuhmedium"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_below="@id/layoutTop">
            <Button
                android:id="@+id/buttonCreateServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_server"/>
            <Button
                android:id="@+id/buttonJoinServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_server"/>
        </LinearLayout>





</RelativeLayout>